syntax = "proto3";

package atsdb.proto;

service Service {
  rpc Insert(InsertRequest) returns (InsertResponse) {}
}

message InsertRequest {
  repeated Request requests = 1;
}

message InsertResponse {
  repeated Response responses = 1;
}

message Response {
  Status status = 1;
  optional string description = 2;
}

enum Status {
  OK = 0;
  INTERNAL_ERROR = 1;
}

message Request {
  string table_name = 1;
  int64 timestamp = 2;
  repeated Label labels = 3;
  repeated Scalar scalars = 4;
}

message Label {
  string key = 1;
  string value = 2;
}

message Scalar {
  string key = 1;
  oneof data {
    int64 int = 2;
    double float = 3;
  }
}
